Refactor redundant `.get(0)` calls to `.getFirst()` for improved readability and maintainability across the codebase, downgrade Quarkus version to 3.29.0.